[generator] Fix unit tests